# stroi-studio

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
src/stroi_studio/: __init__.py  app.py  canvas_io.py  config.py  export_runner.py  histoqc_runner.py  ingest.py  mapping.py  roi_pipeline.py  state.py
src/stroi_studio/static/: dashboard.js  studio.css  studio.js
src/stroi_studio/templates/: index.html  review.html
tests/: conftest.py  test_export.py  test_mapping.py  test_pipeline.py  test_qc.py  test_routes.py  test_tiles.py
